modulÄnderung Üersicht in NavBar eingefügt

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
@@ -7,6 +7,9 @@
         <li role="presentation">
             <a id="alleModuleLink" href="{{ path('alleModule') }}">Modulansicht (alle)</a>
         </li>
+        <li role="presentation">
+            <a id="modulAenderungenLink" href="{{ path('modulAenderungen') }}">Modulansicht (geänderte)</a>
+        </li>
 
         <li role="presentation">
             <a id="modulcodeLink" href="{{ path('modulCodeUebersicht') }}">Modulcodeübersicht</a>
