--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulAenderungen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulAenderungen.html.twig
@@ -7,7 +7,7 @@
             $("#table").tablesorter();
 
             <!-- navbar highlighting -->
-            highlightMe(document.getElementById('alleModuleLink'));
+            highlightMe(document.getElementById('modulAenderungenLink'));
         });
     </script>
     <table id="table" class="table table-bordered tablesorter" >
