--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
@@ -16,11 +16,11 @@
     <title>{{ titelDE }}</title>
     <style type="text/css">
         .modul {
-
+            /*page-break-after: always;*/
         }
 
         .modul .intro {
-            page-break-before: always;
+            /*page-break-before: always;*/
         }
 
         .modul .key {
@@ -51,6 +51,9 @@
 </head>
 <body>
 <div class="modul">
+    {% if fachgebietHasChanged %}
+        <h2>{{ modulBeschreibung.getAngebot().getFachgebiet().getTitel() }}</h2>
+    {% endif %}
     <p class="intro"><h3>{{ titelDE }} ({{ modulBeschreibung.getAngebot().getCode() }})</h3></p>
     <table>
         <thead>
