--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/dozentNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/dozentNav.html.twig
@@ -4,7 +4,7 @@
             <a>Dozent</a>
         </li>
         <li role="presentation">
-            <a id="eigeneModuleLink" href="{{ path('eigeneModule') }}">Modulansicht (verwaltbare)</a>
+            <a id="eigeneModuleLink" href="{{ path('eigeneModule') }}">Modulübersicht (verwaltbare)</a>
         </li>
         <li role="presentation">
             <a id="modulplanungLink" href="{{ path('planungAnzeigen') }}">Modulplanung</a>
