--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
@@ -5,7 +5,7 @@
         </li>
 
         <li role="presentation">
-            <a id="alleModuleLink" href="{{ path('alleModule') }}">Modulansicht (alle)</a>
+            <a id="alleModuleLink" href="{{ path('alleModule') }}">Modulübersicht (alle)</a>
         </li>
         <li role="presentation">
             <a id="modulAenderungenLink" href="{{ path('modulAenderungen') }}">Modulansicht (geänderte)</a>
