modulAenderungenAction Datum-Fix

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulAenderungen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulAenderungen.html.twig
@@ -10,6 +10,7 @@
             highlightMe(document.getElementById('modulAenderungenLink'));
         });
     </script>
+    <h4>{{ 'Das neueste Modulhandbuch wurde am ' ~ dateTime.format('d.m.Y') ~ ' generiert.' }}</h4>
     <table id="table" class="table table-bordered tablesorter" >
         <thead>
         <tr>
