--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulDeaktivierung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulDeaktivierung.html.twig
@@ -12,6 +12,7 @@
     </script>
     <div class="table-responsive">
         <h3>Deaktivierte Module</h3>
+        {% if deaktiv is not empty %}
         <table id="deaktivierte" class="table table-bordered tablesorter">
             <thead>
             <tr>
@@ -33,8 +34,12 @@
             {% endfor %}
             </tbody>
         </table>
+        {% else %}
+            <p>Zurzeit gibt es keine deaktiverten Module.</p>
+        {% endif %}
 
         <h3 style="margin-top: 50px">Angebotene Module im Studiengang {{ studiengang }}</h3>
+        {% if module is not empty %}
         <table id="studiengang" class="table table-bordered tablesorter">
             <thead>
             <tr>
@@ -65,6 +70,9 @@
             {% endfor %}
             </tbody>
         </table>
+        {% else %}
+            <p>Zurzeit werden keine Module in Ihrem Studiengang angeboten.</p>
+        {% endif %}
     </div>
 
     {% include '@FHBingenMHB/flashbags.html.twig' %}
