--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
@@ -8,7 +8,7 @@
             <a id="alleModuleLink" href="{{ path('alleModule') }}">Modulübersicht (alle)</a>
         </li>
         <li role="presentation">
-            <a id="modulAenderungenLink" href="{{ path('modulAenderungen') }}">Modulansicht (geänderte)</a>
+            <a id="modulAenderungenLink" href="{{ path('modulAenderungen') }}">Modulübersicht (geänderte)</a>
         </li>
 
         <li role="presentation">
