--- a/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
@@ -28,7 +28,7 @@ body {
     position: relative;
     height: 100%;
     overflow-y: auto;
-    padding: 0 15px;
+    padding: 0 15px 150px 0;
 }
 
 #sidebar-wrapper {
@@ -98,6 +98,4 @@ body {
 div.ourButtons {
     clear: both;
     margin-top: 50px;
-    /* TODO: Bei Gelegenheit ändern */
-    margin-bottom: 200px;
 }
