STG Context in Modulcode vergabe eingefügt

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeErstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeErstellung.html.twig
@@ -18,7 +18,7 @@
         });
     </script>
 
-    <h3>Modul bearbeiten</h3>
+    <h3>Modul aus {{ studiengang }} bearbeiten</h3>
     <div class="table-responsive">
         {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
         <table class="table table-bordered">
