In weiteren Studiengang anbieten in Alle Module eingefügt

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/alleModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/alleModule.html.twig
@@ -39,6 +39,8 @@
                         {% for name in stgZuModul[count] %}
                             {{ name }}<br/>
                         {% endfor %}
+                        <a href=" {{ path('vorAngebot', {'modulID': veranstaltung.getModulID()}) }}">In weiterem
+                            Studiengang anbieten</a>
                     </td>
                 </tr>
                 {% set count = count +1 %}
