--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbZusammenstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbZusammenstellung.html.twig
@@ -89,8 +89,16 @@
             <ul id="{{ key|replace({' ': '_'}) }}" class="angebote">
                 {% for angebot in zuordnung[key] %}
                     <li>
-                        <input type="hidden" name="{{ angebot }}" value="{{ angebot.getAngebotsID() }}"/>
-                        {{ angebot ~ ' (' ~ angebot.getAngebotsart() ~ ')' }} {# Angebotsart hier sinnvoll? #}
+                        <label>
+                            <input type="hidden" name="{{ angebot }}" value="{{ angebot.getAngebotsID() }}"/>
+                            {{ angebot ~ ' (' ~ angebot.getAngebotsart() ~ ')' }} {# Angebotsart hier sinnvoll? #}
+                            {# if Veranstaltung des Angebots seit letzter MHB-Erstullung geändert #}
+                            {% if angebot.getVeranstaltung().getErstellungsdatum().getTimestamp() > neuestesMHBDateTime.getTimestamp() %}
+                                {# TODO: Achtung! Es wird nur auf das Datum, nicht auf Stunde, Minute, Sekunde überprüft #}
+                                {# then Angebot als geändert markieren #}
+                                <span style="color: red">{{ 'GEÄNDERT' }}</span>
+                            {% endif %}
+                        </label>
                     </li>
                 {% endfor %}
             </ul>
