--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
@@ -48,9 +48,25 @@
             <tr>
                 <td colspan="3" style="color:red"> Mit [#] gekennzeichnete Felder sind Pflichtfelder</td>
             </tr>
-            {{ form_row(form.name) }}
-            {{ form_row(form.nameEN) }}
-            {{ form_row(form.kuerzel) }}
+
+            <tr class="form_row">
+                <td>{{ form_label(form.name) }}</td>
+                <td title="Der Modultitel muss folgendem Muster entsprechen [A-Z]{5,70}">{{ form_widget(form.name) }}</td>
+                <td>{{ form_errors(form.name) }}</td>
+            </tr>
+
+            <tr class="form_row">
+                <td>{{ form_label(form.nameEN) }}</td>
+                <td title="Der englische Name muss folgendem Muster entsprechen [A-Z]{5,70}">{{ form_widget(form.nameEN) }}</td>
+                <td>{{ form_errors(form.nameEN) }}</td>
+            </tr>
+
+            <tr class="form_row">
+                <td>{{ form_label(form.kuerzel) }}</td>
+                <td title="Kürzel muss folgendem Muster entsprechen [A-Z0-9]{2,5} z.B.: PROG1">{{ form_widget(form.kuerzel) }}</td>
+                <td>{{ form_errors(form.kuerzel) }}</td>
+            </tr>
+
             {% block beauftragter %}
             {% endblock beauftragter %}
             {{ form_row(form.haeufigkeit) }}
@@ -91,13 +107,22 @@
             {{ form_row(form.lernergebnisse) }}
             {{ form_row(form.inhalte) }}
             {{ form_row(form.sprache) }}
-            {{ form_row(form.SpracheSonstiges) }}
+            <tr class="form_row">
+                <td>{{ form_label(form.SpracheSonstiges) }}</td>
+                <td title="Default Werte können bei bedarf gelöscht werden">{{ form_widget(form.SpracheSonstiges) }}</td>
+                <td>{{ form_errors(form.SpracheSonstiges) }}</td>
+            </tr>
             {{ form_row(form.literatur) }}
             {{ form_row(form.voraussetzungInh) }}
             {{ form_row(form.lehrveranstaltungen) }}
             {{ form_row(form.pruefungsformen) }}
             {{ form_row(form.PruefungsformSonstiges) }}
             {{ form_row(form.voraussetzungLP) }}
+            <tr class="form_row">
+                <td>{{ form_label(form.PruefungsleistungSonstiges) }}</td>
+                <td title="Default Werte muss gelöscht werden, falls nicht Notwendig">{{ form_widget(form.PruefungsleistungSonstiges) }}</td>
+                <td>{{ form_errors(form.PruefungsleistungSonstiges) }}</td>
+            </tr>
             {{ form_row(form.PruefungsleistungSonstiges) }}
             {{ form_row(form.StudienleistungSonstiges) }}
         </table>
