--- a/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
@@ -28,7 +28,7 @@ body {
     position: relative;
     height: 100%;
     overflow-y: auto;
-    padding: 0 15px 150px 0;
+    padding: 0 15px 150px 15px;
 }
 
 #sidebar-wrapper {
