--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
@@ -83,11 +83,11 @@
             </td>
             <td colspan="2">
                 <div class="key">Studiensemeseter</div>
-                {# TODO: als Tabelle ausgeben #}
                 <table>
                 {% for studienplan in modulBeschreibung.getStudienplaene() %}
                     <tr>
                         <td class="studiensemseter startsemester">{{ studienplan.getStartsemester() }}:</td>
+                        {# TODO: wird auf VM als zwei Zeilen ausgegeben, warum? #}
                         <td class="studiensemseter">{{ studienplan.getRegelsemester()|replace({'[': '', ']': '', ',': '. + '}) ~ '. Semester' }}</td>
                     </tr>
                 {% endfor %}
