--- a/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
@@ -22,6 +22,7 @@ body {
     height: 100%;
     overflow-y: auto;
     padding: 50px 0 0 0;
+    /*padding: 50px 0 150px 0;*/
 }
 
 #main {
@@ -29,6 +30,8 @@ body {
     height: 100%;
     overflow-y: auto;
     padding: 0 15px 150px 15px;
+    /*overflow-y: hidden;
+    padding: 0 15px 0 15px;*/
 }
 
 #sidebar-wrapper {
