--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbZusammenstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbZusammenstellung.html.twig
@@ -200,10 +200,10 @@
             </div>
         </div>
 
-        {#<div class="ourButtons">#}
-            {#&#123;&#35; <button class="btn btn-default" type="reset">zurücksetzen</button> &#35;&#125;#}
-            {#<button class="btn btn-primary" type="submit">abschicken</button>#}
-        {#</div>#}
+        <div class="ourButtons">
+            {# <button class="btn btn-default" type="reset">zurücksetzen</button> #}
+            <button class="btn btn-primary" type="submit">abschicken</button>
+        </div>
     </form>
 
     <div id="nichtMhbWrapper">
