--- a/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
@@ -29,9 +29,13 @@ body {
     position: relative;
     height: 100%;
     overflow-y: auto;
-    padding: 0 15px 150px 15px;
-    /*overflow-y: hidden;
-    padding: 0 15px 0 15px;*/
+    /*padding: 0 15px 150px 15px;*/
+    padding: 0 15px 0 15px;
+}
+
+#content {
+    overflow-y: hidden;
+    padding-bottom: 150px;
 }
 
 #sidebar-wrapper {
